compiler/fir/analysis-tests/testData/resolve/treeSet.kt
import java.util.*

val x: SortedSet<Int> = <!INITIALIZER_TYPE_MISMATCH!>TreeSet()<!>
